@@ -6,6 +6,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Important bugfix in dpkg-gensymbols for people using includes in symbol
     files: the current object didn't flow back from the included file to
     the including file.
+  * Fix Dpkg::Version comparison code. Closes: #504135
 
   [ Updated dpkg translations ]
   * Greek (Emmanuel Galatoulas). Closes: #498585
