@@ -1,3 +1,11 @@
+2008-11-07  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Version.pm: Synchronize code with version used by
+	debbugs (add some bugfixes).
+	* scripts/t/900_Dpkg_Version.t: Add non-regression tests for
+	version comparison code.
+	* scripts/Makefile.am: Add new file in the dist tarball.
+
 2008-10-20  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Let the recursively
